--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>café</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <section class="home">
         <div class="navbar">
             <div class="logo">
-                <img src="/assets/images/logo.png" alt="logo">
+                <img src="./assets/images/logo.png" alt="logo">
             </div>
 
             <div class="nav">
@@ -53,7 +53,7 @@
         <div class="part2">
 
             <div class="img1">
-                <img src="/assets/images/about-img.jpeg" alt="about">
+                <img src="./assets/images/about-img.jpeg" alt="about">
             </div>
 
             <div class="part3">
